--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "detail-daily",
+  "name": "H5-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "test": "vue-cli-service build --mode test",
+    "production": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.2",
+    "postcss-pxtorem": "^5.1.1",
+    "sha1": "^1.1.1",
+    "vant": "^2.12.22",
+    "vconsole": "^3.14.6",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
